# aurorachat

./: .dockerignore  .env.example  .gitignore  Dockerfile  Justfile  Procfile  README.md  bot.py  bulk_upload.py  create_assistant.py  fly-dev.toml  fly.toml  gogopool.md  md.py  pyproject.toml
.github/workflows/: docker.yml
ai/: __init__.py  converser.py  req.py  tokens.py  workers_ai.py
athenadb/: __init__.py
cogs/: admin.py  chat.py  images.py  memegen.py  ping.py  summary.py  tts.py  upload.py
cogs/chat/: __init__.py  process_thread.py
cogs/cleaner/: __init__.py
cogs/feedback/: __init__.py  process_feedback.py
cogs/help/: __init__.py  constants.py
cogs/quickchat/: __init__.py
cogs/summary/: __init__.py  constants.py  summary.py
cogs/upload/: __init__.py  process_audio.py  process_upload.py
db/: __init__.py  helpers.py  models.py
docs/: README.md  product_description.md
listings/: discordbotlist.md
sdxl/: __init__.py  workers_ai.py
tools/pgadmin/: fly.toml
utils/: __init__.py  color.py  file_buffer.py  strings.py  youtube.py
utils/upload/: __init__.py  process_audio.py  process_docs.py  process_upload.py
utils/webhooks/: __init__.py
