[tool.poetry]
name = "aurora"
version = "0.1.0"
description = ""
authors = ["chand1012 <chandler@chand1012.dev>"]
license = "AGPL-v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nextcord = "^2.6.0"
openai = "^1.1.1"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
tiktoken = "^0.5.1"
httpx = "^0.25.1"
sqlmodel = "^0.0.11"
youtube-transcript-api = "^0.6.1"
psycopg2-binary = "^2.9.9"
humanize = "^4.9.0"
python-docx = "^1.1.0"
pypdf2 = "^3.0.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
